<resources>
    <string name="app_name">My To Do app</string>
    <string name="edit_info">Edit Info</string>
    <string name="logout">Logout</string>
    <string name="user_name">User name:</string>
    <string name="user_profile">User profile</string>
    <string name="todo">TODO</string>
    <string name="to_do">TODO</string>
    <string name="techno_production">Techno production</string>
    <string name="my_todo">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="welcome_to_my_day">WELCOME TO MY DAY</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="welcome_there">WELCOME THERE,</string>
    <string name="create_an_account_to_start_your_journy">Create an account to start your journy</string>
    <string name="username">Username</string>
    <string name="password_1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_1">Email</string>
    <string name="create">Create</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_2">Login</string>
    <string name="more_options">More options</string>
    <string name="my_day">My day</string>
    <string name="todo_2">TODO</string>
    <string name="task_1">Task 1</string>
    <string name="edit_task_1">Edit Task 1</string>
    <string name="delete_task_1">Delete Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="edit_task_2">Edit Task 2</string>
    <string name="delete_task_2">Delete Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="edit_task_3">Edit Task 3</string>
    <string name="delete_task_3">Delete Task 3</string>
    <string name="task_4">Task 4</string>
    <string name="edit_task_4">Edit Task 4</string>
    <string name="delete_task_4">Delete Task 4</string>
    <string name="todo_3">TODO</string>
    <string name="enter_item_here">Enter item here</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="develpoer_profile">Develpoer profile</string>
    <string name="todo_4">TODO</string>
    <string name="developer_info">Developer info</string>
    <string name="name_dipika_udayangani">Name : Dipika Udayangani</string>
    <string name="student_no_2021t01247">Student No : 2021t01247</string>
    <string name="personal_statement_undergraduate_university_of_colombo">Personal statement : Undergraduate University of Colombo</string>
    <string name="version_0_1">Version 0.1</string>
    <string name="edit_info1">Edit Info</string>
    <string name="user_name1">user name</string>
    <string name="email1">Email</string>
    <string name="save_1">Save</string>
    <string name="cancel_1">Cancel</string>
    <string name="password_text">Username</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? SIGN UP</string>
    <string name="welcome_to_my_day_">WELCOME ,TO MY DAY</string>
    <string name="todo_6">TODO</string>
    <string name="login_3">Login</string>
    <string name="sign_up_2">Sign up</string>
    <string name="username2">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password1">Password</string>
    <string name="confirm_password1">Confirm password</string>
    <string name="already_have_an_account_login">Already have an account? LOGIN</string>
    <string name="navigation_drawer_open"> Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="save_5">Save</string>
    <string name="don_t_worry_recover_your_password">Don\'t worry! Recover your password .</string>
    <string name="to_do_1">TO DO 1</string>
    <string name="profile">Profile</string>
    <string name="developer_info1">Developer Info:</string>
    <string name="log_out">Log Out</string>
    <string name="hello_dipika">Hello Dipika,</string>
    <string name="dipika_gmail_com">dipika@gmail.com</string>
    <string name="dashboard">Dashboard</string>
    <string name="developer_info2">Developer Info</string>
    <string name="log_out2">Log Out</string>
</resources>