<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="358dp"
    android:layout_height="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EAC7F4">

    <ImageButton
        android:id="@+id/more"
        android:layout_width="15dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20sp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/more_options"
        android:onClick="ClickMenu"
        android:src="@drawable/more" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/my_day"
        android:textColor="@color/black"
        android:textColorHint="#0E0C0C"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/todo_2"
        app:srcCompat="@drawable/logo"
        tools:srcCompat="@drawable/logo" />


</LinearLayout>