<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="332sp"
    android:layout_height="50sp"
    tools:context=".todoData"
    android:layout_marginStart="40dp"
    android:orientation="horizontal">



    <EditText
        android:id="@+id/task9"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/to_do_1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/edit9"
        android:layout_width="35dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="#EAC7F4"
        android:contentDescription="@string/edit_task_1"
        android:src="@drawable/edit" />

    <ImageButton
        android:id="@+id/delete9"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_task_1"
        android:src="@drawable/delete" />


</LinearLayout>