<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dev_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EAC7F4"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">





        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/developer_info"
            android:textColor="#333F3E"
            android:textSize="24sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="191dp"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/dev"
            tools:srcCompat="@drawable/dev"
            android:contentDescription="@string/todo_4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="363dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/name_dipika_udayangani"
                android:textColor="#333F3E"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/student_no_2021t01247"
                android:textColor="#333F3E"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/personal_statement_undergraduate_university_of_colombo"
                android:textColor="#333F3E"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:text="@string/version_0_1"
                android:textColor="#333F3E"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>