<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#EAC7F4"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="170dp"
            android:layout_height="120dp"
            android:layout_marginTop="2dp"
            app:srcCompat="@drawable/new_logo"
            android:contentDescription="@string/todo1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/emblema_one"
            android:gravity="center"
            android:text="@string/welcome_to_my_day"
            android:textColor="#090908"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_to_your_account"
            android:textColor="#090908"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="DuplicateIds" />

        <LinearLayout
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/txt_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/white"
                android:hint="@string/password_text"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="310dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="347dp"
                android:layout_height="match_parent"
                android:textColorHint="@color/black"
                android:layout_marginTop="5sp"
                android:hint="@string/password1"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="311dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>



        <Button
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_gravity="right"
            android:backgroundTint="#EAC7F4"
            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:textColor="#250EF3"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat,RtlHardcoded" />

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#F5F5F5"
            android:text="@string/login"
            android:textColor="#333F3E"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_user"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_gravity="right"
                android:backgroundTint="#EAC7F4"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textAlignment="textEnd"
                android:textColor="#090909"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat,RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>