<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#EAC7F4"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/emblema_one"
            android:gravity="center|top"
            android:text="@string/welcome_to_my_day_"
            android:textColor="#0E0E0D"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:contentDescription="@string/todo_6"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/btn_log"
            android:layout_width="327dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:backgroundTint="#F5F5F5"
            android:text="@string/login_3"
            android:textColor="#333F3E"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="DuplicateIds" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="327dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:backgroundTint="#F5F5F5"
            android:text="@string/sign_up_2"
            android:textColor="#333F3E"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>