<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forget">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#EAC7F4"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn1"
            android:layout_width="39dp"
            android:layout_height="38dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="back1"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/imageView_8"
            android:layout_width="170dp"
            android:layout_height="163dp"
            android:contentDescription="@string/todo2"
            app:srcCompat="@drawable/recover" />

        <TextView
            android:id="@+id/textView_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/emblema_one"
            android:gravity="center"
            android:text="Forget password?"
            android:textColor="#0A0B0A"
            android:textSize="38sp"
            android:textStyle="bold"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/textView_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/don_t_worry_recover_your_password"
            android:textColor="#0A0B0A"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="DuplicateIds" />

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">
            <!-- username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_name7"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/username2"
                android:textColorHint="@color/black"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:hintTextColor="@color/black"
                tools:ignore="InvalidId">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="308dp"
                    android:layout_height="60dp"
                    android:background="@color/white"
                    android:inputType="text"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_email7"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:hint="@string/e_mail"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="310dp"
                    android:layout_height="60dp"
                    android:background="@color/white"
                    android:inputType="text"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_password7"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password1"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="310dp"
                    android:layout_height="60dp"
                    android:background="@color/white"
                    android:inputType="text"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- confirm password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_confirmPassword7"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_password1"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="310dp"
                    android:layout_height="60dp"
                    android:background="@color/white"
                    android:inputType="text"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btnSave7"
            android:layout_width="245dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#F5F5F5"
            android:text="@string/save_5"
            android:textColor="#333F3E"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>